# drifts

./: .gitignore  Dockerfile  Plotting Data Distributions.ipynb  building_and_deploying.sh  pyproject.toml  simple_train.ipynb  usp_stream_datasets.py
dev/: JSDDM.py  common.py  comparisor.py  config.py  ddm.py  histogram_density_method_with_ks_and_js.py  ksddm_tester_dry.py  river_config.py  river_datasets.py  simple_hdddm_runner.py  simple_jsddm_runner.py  simple_ksddm.py  test_insects_experiment_class.py  test_synthetic_experiment.py
dev/codes/: KS Analysis.ipynb  Plotting Aedes Data Distributions.ipynb  README.md  base_experiment.py  binning.py  binning_v2.py  binning_visualizer.py  config.py  dataset_experiment.py  experiment.py  insects_experiment.py  kl.py  synthetic_data.py  synthetic_experiment.py  test_binned_js_test.py  test_binned_kl_test.py  test_binning.py  test_experiment.py  test_experiment_batches.py  test_kl_div.py  test_kl_test.py  test_kl_working.py  test_stratify.py  test_visualizer.py  usp_stream_datasets.py  utils.py  visualizer.py
dev/experiment_1/: pycaret_experiment
dev/notebooks/: Drift Detection Algorithms - Aedes.ipynb  KS - All Datasets.ipynb  KS - Windows for all - Incremental-gradual.ipynb  KS Tests Aedes.ipynb  Multithreading.ipynb  Plotting Data Distributions.ipynb  simple_train.ipynb  simple_train_iris.ipynb
