[tool.poetry]
name = "drifts"
version = "0.1.0"
description = "Package for working with concept drifts in different scenarios."
authors = ["Lucas Helfstein <lucas.helfstein@idwall.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
seaborn = "^0.12.2"
notebook = "^7.0.3"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
