[tool.poetry]
name = "drifts"
version = "0.1.0"
description = "Package for working with concept drifts in different scenarios."
authors = ["Lucas Helfstein <lucashelfs@ime.usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scikit-learn = "<1.3.0"
pandas = "<2.1.0"
seaborn = "^0.12.2"
notebook = "^7.0.3"
black = "^23.9.1"
kaleido = "0.2.1"
pycaret = "3.0.0"
mlflow = "^2.7.0"
schemdraw = "<0.16"
river = "0.15.0"
imageio = "^2.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
