[tool.poetry]
name = "drifts"
version = "0.1.0"
description = "Package for working with concept drifts in different scenarios."
authors = ["Lucas Helfstein <lucashelfs@ime.usp.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "<1.4.1"
pandas = "^2.2.1"
seaborn = "0.13.2"
notebook = "^7.0.3"
black = "^23.9.1"
kaleido = "0.2.1"
mlflow = "^2.7.0"
schemdraw = "<0.16"
tqdm = "^4.66.2"
river = "^0.21.0"
menelaus = "^0.2.0"
plotly = "^5.20.0"
imageio = "^2.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
